Triển khai các table SQL và các Data mẫu

--- a/MedicalAppointmentAPI/appsettings.json
+++ b/MedicalAppointmentAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=MedicalAppointmentDB;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=DESKTOP-RB2S43B;Database=MedicalAppointmentDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
