Update API Auth

--- a/MedicalAppointmentAPI/appsettings.json
+++ b/MedicalAppointmentAPI/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-RB2S43B;Database=MedicalAppointmentDB;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=DESKTOP-RB2S43B;Database=MedicalAppointmentDB;Trusted_Connection=True;TrustServerCertificate=True;", 
+        "AzureConnection": "Server=tcp:medicalappointment-db.database.windows.net,1433;Initial Catalog=medicalappointment-db;Persist Security Info=False;User ID=sqladmin;Password=admin@2002;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,10 +11,11 @@
     }
   },
   "JwtSettings": {
-    "Secret": "super-secret-key",
+    "SecretKey": "your-256-bit-secret-key-here-minimum-16-characters",
     "Issuer": "MedicalAppointmentAPI",
-    "Audience": "MedicalAppointmentAPI",
-    "AccessTokenValidityMinutes": 60
+    "Audience": "MedicalAppointmentClient",
+    "AccessTokenExpirationMinutes": 30, 
+    "RefreshTokenExpirationMinutes": 60
   },
   "AllowedHosts": "*"
 }
