--- a/MedicalAppointmentAPI/appsettings.json
+++ b/MedicalAppointmentAPI/appsettings.json
@@ -3,7 +3,16 @@
         "DefaultConnection": "Server=DESKTOP-RB2S43B;Database=MedicalAppointmentDB;Trusted_Connection=True;TrustServerCertificate=True;", 
         "AzureConnection": "Server=tcp:medicalappointment-db.database.windows.net,1433;Initial Catalog=medicalappointment-db;Persist Security Info=False;User ID=sqladmin;Password=admin@2002;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  
+  "EmailSettings":{
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "lehieunghia2402@gmail.com",
+    "SmtpPassword": "wndj dpgq jqod neoy",
+    "FromEmail": "lehieunghia2402@gmail.com",
+    "FromName": "Booking Appointment System",
+    "EnableSsl": true
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
